// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`floatingToolbar() mediaGroup should not return media group items if allowMediaInline is false 1`] = `
Array [
  Object {
    "appearance": "danger",
    "icon": [Function],
    "id": "editor.media.delete",
    "onBlur": [Function],
    "onClick": [Function],
    "onFocus": [Function],
    "onMouseEnter": [Function],
    "onMouseLeave": [Function],
    "testId": "media-toolbar-remove-button",
    "title": "Remove",
    "type": "button",
  },
]
`;

exports[`floatingToolbar() mediaGroup should return media group items 1`] = `
Array [
  Object {
    "id": "editor.media.view.switcher",
    "options": Array [
      Object {
        "disabled": false,
        "id": "editor.media.view.switcher.inline",
        "onClick": [Function],
        "selected": false,
        "testId": "inline-appearance",
        "title": "Display inline",
      },
      Object {
        "disabled": false,
        "id": "editor.media.view.switcher.thumbnail",
        "onClick": [Function],
        "selected": true,
        "testId": "thumbnail-appearance",
        "title": "Display thumbnail",
      },
    ],
    "title": "Change view",
    "type": "dropdown",
  },
  Object {
    "type": "separator",
  },
  Object {
    "fallback": Array [],
    "render": [Function],
    "type": "custom",
  },
  Object {
    "type": "separator",
  },
  Object {
    "icon": [Function],
    "id": "editor.media.card.download",
    "onClick": [Function],
    "title": "Download",
    "type": "button",
  },
  Object {
    "type": "separator",
  },
  Object {
    "appearance": "danger",
    "icon": [Function],
    "id": "editor.media.delete",
    "onBlur": [Function],
    "onClick": [Function],
    "onFocus": [Function],
    "onMouseEnter": [Function],
    "onMouseLeave": [Function],
    "testId": "media-toolbar-remove-button",
    "title": "Remove",
    "type": "button",
  },
]
`;

exports[`floatingToolbar() mediaInline should return media inline items 1`] = `
Array [
  Object {
    "id": "editor.media.view.switcher",
    "options": Array [
      Object {
        "disabled": false,
        "id": "editor.media.view.switcher.inline",
        "onClick": [Function],
        "selected": true,
        "testId": "inline-appearance",
        "title": "Display inline",
      },
      Object {
        "disabled": false,
        "id": "editor.media.view.switcher.thumbnail",
        "onClick": [Function],
        "selected": false,
        "testId": "thumbnail-appearance",
        "title": "Display thumbnail",
      },
    ],
    "title": "Change view",
    "type": "dropdown",
  },
  Object {
    "type": "separator",
  },
  Object {
    "fallback": Array [],
    "render": [Function],
    "type": "custom",
  },
  Object {
    "type": "separator",
  },
  Object {
    "icon": [Function],
    "id": "editor.media.card.download",
    "onClick": [Function],
    "title": "Download",
    "type": "button",
  },
  Object {
    "type": "separator",
  },
  Object {
    "appearance": "danger",
    "icon": [Function],
    "id": "editor.media.delete",
    "onBlur": [Function],
    "onClick": [Function],
    "onFocus": [Function],
    "onMouseEnter": [Function],
    "onMouseLeave": [Function],
    "testId": "media-toolbar-remove-button",
    "title": "Remove",
    "type": "button",
  },
]
`;
